mapped with contact section with nav contact

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
 
        <!-- contact-section -->
-    <div class="contact-section">
+    <div class="contact-section" id="contactsme">
       <div class="container">
       <div class="contact-heading">Contact me</div>
 
